[gd_scene load_steps=28 format=3 uid="uid://bcadj5r77ovtn"]

[ext_resource type="Texture2D" uid="uid://bk1nmu2pkdenx" path="res://assets/vfx/tear.png" id="1"]
[ext_resource type="Script" uid="uid://dolkd3p3u4fc1" path="res://sources/utils/fx/rocket.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bdi46ixijlqv6" path="res://assets/vfx/rocket.png" id="4"]
[ext_resource type="AudioStream" uid="uid://bbqebmbl4yopa" path="res://assets/sfx/fireworks_1.mp3" id="4_cme6g"]
[ext_resource type="Texture2D" uid="uid://dtwpg8ymy3d6q" path="res://assets/vfx/dustparticule.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dgqkgfme0xx8u" path="res://assets/vfx/sparkles.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cp4dfgyjskjhp" path="res://assets/vfx/explosion_spritesheet.png" id="7"]
[ext_resource type="AudioStream" uid="uid://m3k5xkjkd4s6" path="res://assets/sfx/blast_1.mp3" id="8_l3gnw"]

[sub_resource type="Curve2D" id="1"]
resource_local_to_scene = true

[sub_resource type="Gradient" id="7"]
offsets = PackedFloat32Array(0, 0.277778, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.816667, 0, 0.501961, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="4"]
gradient = SubResource("7")
width = 32

[sub_resource type="Curve" id="8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.503817, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="6"]
width = 32
curve = SubResource("8")

[sub_resource type="ParticleProcessMaterial" id="9"]
resource_local_to_scene = true
lifetime_randomness = 0.5
direction = Vector3(0, 1, 0)
spread = 12.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 98, 0)
scale_min = 0.25
scale_max = 0.5
scale_curve = SubResource("6")
color_ramp = SubResource("4")

[sub_resource type="Gradient" id="Gradient_txwwp"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j53o6"]
gradient = SubResource("Gradient_txwwp")
width = 32

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a7mq3"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 125.0
initial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 0.25
color = Color(1, 1, 1, 0.501961)
color_ramp = SubResource("GradientTexture1D_j53o6")

[sub_resource type="CanvasItemMaterial" id="24"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="28"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="29"]
gradient = SubResource("28")
width = 32

[sub_resource type="Curve" id="25"]
_data = [Vector2(0, 0.496044), 0.0, 0.0, 0, 0, Vector2(0.496183, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="26"]
width = 32
curve = SubResource("25")

[sub_resource type="ParticleProcessMaterial" id="27"]
resource_local_to_scene = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 75.0
emission_ring_inner_radius = 25.0
emission_ring_cone_angle = 90.0
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("26")
color_ramp = SubResource("29")
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="CanvasItemMaterial" id="22"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="11"]
offsets = PackedFloat32Array(0, 0.560311, 1)
colors = PackedColorArray(3, 3, 3, 1, 2, 2, 2, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="12"]
gradient = SubResource("11")
width = 32

[sub_resource type="ParticleProcessMaterial" id="23"]
resource_local_to_scene = true
lifetime_randomness = 0.25
direction = Vector3(0, -1, 0)
spread = 150.0
initial_velocity_min = 125.0
initial_velocity_max = 250.0
gravity = Vector3(0, 125, 0)
color_initial_ramp = SubResource("12")
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Rocket" type="Path2D"]
curve = SubResource("1")
script = ExtResource("3")

[node name="FireworkAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cme6g")
bus = &"Effects"

[node name="BlastAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_l3gnw")
bus = &"Effects"

[node name="TravelingTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PathFollow2D" type="PathFollow2D" parent="."]
loop = false

[node name="Rocket" type="Sprite2D" parent="PathFollow2D"]
position = Vector2(0, -12)
rotation = 1.57079
texture = ExtResource("4")
region_enabled = true
region_rect = Rect2(0, 0, 113, 254)

[node name="Trail" type="GPUParticles2D" parent="PathFollow2D/Rocket"]
position = Vector2(12.9997, 110)
amount = 16
process_material = SubResource("9")
texture = ExtResource("1")
lifetime = 0.25

[node name="ExplosionParticles" type="Node2D" parent="PathFollow2D"]

[node name="DustClouds" type="GPUParticles2D" parent="PathFollow2D/ExplosionParticles"]
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_a7mq3")
texture = ExtResource("5")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="Explosion" type="GPUParticles2D" parent="PathFollow2D/ExplosionParticles"]
material = SubResource("24")
emitting = false
process_material = SubResource("27")
texture = ExtResource("7")
lifetime = 0.5
one_shot = true
explosiveness = 0.8

[node name="Sparkles" type="GPUParticles2D" parent="PathFollow2D/ExplosionParticles"]
material = SubResource("22")
emitting = false
amount = 64
process_material = SubResource("23")
texture = ExtResource("6")
one_shot = true
explosiveness = 1.0

[connection signal="timeout" from="TravelingTimer" to="." method="_on_TravelingTimer_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
